# nbappinator

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  covrun.bat  data.json  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: build_conda.yml  build_release.yml  scorecard.yml  test_coverage.yml  tests_verbose.yml
htmlcov/: class_index.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_nb_py.html  d_f5cf8b5c020ef26e___init___py.html  d_f5cf8b5c020ef26e__version_py.html  d_f5cf8b5c020ef26e_aggridhelper_py.html  d_f5cf8b5c020ef26e_appinator_py.html  d_f5cf8b5c020ef26e_browser_title_py.html  d_f5cf8b5c020ef26e_datagrid_py.html  d_f5cf8b5c020ef26e_plotly_charts_py.html  d_f5cf8b5c020ef26e_treew_py.html  d_f5cf8b5c020ef26e_version_py.html  function_index.html  index.html  status.json  z_49852c30656bf30f___init___py.html  z_49852c30656bf30f_base_py.html  z_49852c30656bf30f_button_py.html  z_49852c30656bf30f_debug_py.html  z_49852c30656bf30f_display_py.html  z_49852c30656bf30f_expansion_py.html  z_49852c30656bf30f_form_py.html  z_49852c30656bf30f_layout_py.html  z_49852c30656bf30f_output_py.html  z_49852c30656bf30f_tabs_py.html  z_f5cf8b5c020ef26e___init___py.html  z_f5cf8b5c020ef26e__version_py.html  z_f5cf8b5c020ef26e_aggrid_anywidget_py.html  z_f5cf8b5c020ef26e_aggridhelper_py.html  z_f5cf8b5c020ef26e_app_py.html  z_f5cf8b5c020ef26e_appinator_py.html  z_f5cf8b5c020ef26e_browser_title_py.html  z_f5cf8b5c020ef26e_datagrid_py.html  z_f5cf8b5c020ef26e_graphvizgraph_py.html  z_f5cf8b5c020ef26e_networkgraph_py.html  z_f5cf8b5c020ef26e_plotly_charts_py.html  z_f5cf8b5c020ef26e_treew_py.html
nbappinator/: __init__.py  __version__.py  _version.py  aggrid_anywidget.py  aggridhelper.py  app.py  appinator.py  browser_title.py  datagrid.py  graphvizgraph.py  networkgraph.py  plotly_charts.py  treew.py  version.py
nbappinator/vuetify3/: __init__.py  base.py  button.py  debug.py  display.py  expansion.py  form.py  layout.py  output.py  tabs.py
notebook_tests/: 1_readme_example.ipynb  2_basics.ipynb  3_charts_plotly.ipynb  3_charts_seaborn.ipynb  README.md  additional_tests.ipynb  grid_app.ipynb  grid_metadata.ipynb  grid_metadata_2.ipynb  tree_app.ipynb
notebooks/: 1_readme_example.ipynb  2_basics.ipynb  3_charts_matplotlib.ipynb  3_charts_plotly.ipynb  3_charts_seaborn.ipynb  4_networkx_graph.ipynb  5_graphviz_graph.ipynb  5_tree_app.ipynb  6_grid_app.ipynb  6_matplotlib.ipynb  6_tree_app.ipynb  7_grid_anywidget.ipynb  8_aggrid_enterprise.ipynb  9_default_grid_renderer.ipynb  additional_tests.ipynb  grid_actions.ipynb  grid_app.ipynb  grid_metadata.ipynb  grid_metadata_2.ipynb  grid_tree.ipynb  htmloutput.ipynb  readme_example.ipynb  seaborn.ipynb  tree_app.ipynb
notebooks/.ipynb_checkpoints/: grid_app-checkpoint.ipynb  grid_metadata-checkpoint.ipynb
recipe/: meta.yaml
tests/: .default_env  conftest.py  env_helper.py  snapshot_mgr.py  test_fails.py  test_nb.py  test_visual.py
