[project.urls]
Homepage = "https://github.com/iqmo-org/nbappinator"
Repository = "https://github.com/iqmo-org/nbappinator"
Issues = "https://github.com/iqmo-org/nbappinator/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nbappinator"
version = "0.0.0"
license = "BSD-3-Clause"
description = "Jupyter Notebook Application Builder"
authors = ["Paul T <paul@iqmo.com>"]
maintainers =  ["Paul T <paul@iqmo.com>"]
packages = [
    { include = "nbappinator", from = "."}
    ]
readme = "README.md"
homepage = "https://github.com/iqmo-org/nbappinator"
repository = "https://github.com/iqmo-org/nbappinator"
keywords = ["nbappinator", "Jupyter", "Bquant"] 

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.22.0"
ipywidgets = "^8.1.3"
ipyvuetify = "^1.9.4"
ipyaggrid = "^0.5.4"
ipytree = "^0.2.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
universal-pathlib = "^0.2.2"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pyright]
typeCheckingMode = "basic"
reportGeneralTypeIssues = false
reportPrivateImportUsage = false

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs/source/conf.py"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "S", "B", "G", "N", "I001", "T", "PD", "C90"]
ignore = [
    #E203, 
    #"W503", 
    #"W293", 
    "W291",
    "E501",
    "S608", 
    "PD901"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
# style = "semver"