[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "coverage>=7.5.3,<9",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
  "pytest-xdist>=3.8.0,<4",
  "nbformat>=5.10.4,<6",
  "nbconvert>=7.17.0,<8",
  "ipykernel>=7.2.0",
  "universal-pathlib>=0.3.10,<1",
  "pre-commit-uv>=4.1.4",
  "python-dotenv>=1.2.1,<2",
  "matplotlib>=3.10.8",
  "networkx>=3.0",
  "pyright>=1.1.408",
]

[project]
name = "nbappinator"
description = "Jupyter Notebook Application Builder"
authors = [{name = "Paul T", email = "paul@iqmo.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
maintainers = [{name = "Paul T", email = "paul@iqmo.com"}]
keywords = ["nbappinator", "Jupyter", "Bquant"]
dependencies = [
  "plotly>=5.22.0",
  "ipywidgets>=8.1.3",
  "ipyvuetify>=1.9.4",
  "ipyaggrid>=0.5.4",
  "ipytree>=0.2.2",
  "pandas>=2.2.2",
  "anywidget>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/iqmo-org/nbappinator"
Repository = "https://github.com/iqmo-org/nbappinator"
Issues = "https://github.com/iqmo-org/nbappinator/issues"

[tool.hatch.build.targets.sdist]
include = ["nbappinator"]

[tool.hatch.build.targets.wheel]
include = ["nbappinator"]

[tool.hatch.build.targets.wheel.sources]
"./nbappinator" = "nbappinator"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.pyright]
typeCheckingMode = "basic"
reportGeneralTypeIssues = false
reportPrivateImportUsage = false

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs/source/conf.py"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "S", "B", "G", "N", "I001", "T", "PD", "C90"]
ignore = [
    #E203,
    #"W503",
    #"W293",
    "W291",
    "E501",
    "S608",
    "G004",
    "C901",
    "T201",
    "S101"]
