[metadata]
name = your_package_name
version = 0.1.0
author = Your Name
long_description = file: readme.md

[options]
packages = find:
install_requires =
    ipyaggrid
    ipyvuetify
    ipywidgets
    pandas
    ipytree
    plotly
    
[options.packages.find]
where = .
exclude =
    notebooks*
    node_modules*
    dist*