[metadata]
name = nbappinator
version = 0.1.1b1
author = Paul T
long_description = file: README.md

[options]
packages = find:
install_requires =
    ipyaggrid
    ipyvuetify
    ipywidgets
    pandas
    ipytree
    plotly
    
[options.packages.find]
where = .
exclude =
    notebooks*
    node_modules*
    dist*